# kratosgui_python

./: CMakeLists.txt  README.md  config.py  package.xml  pyproject.toml  requirements.txt  setup.py
.test/: 8765_tester.py  8766_tester.py  8767_tester.py  8768_tester.py  8769_tester.py
app/: __init__.py  db.py  schema.sql
app/static/js/: SGP30.js  arm.js  gassensor.js  gps.js  graphs.js  microscope.js  npk.js  roslib.js  scissorlift.js
app/templates/: base.html
kratosgui_python.egg-info/: SOURCES.txt
src/: launcher.py  socket_for_BME280.py  socket_for_NPK.py  socket_for_SGP30.py  socket_for_multichannel.py  socket_for_spectro.py  socket_for_temperature.py  websocket_module.py
src/kratosgui_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
