[project]
name = "kratosgui_python"
version = "0.0.1"
authors = [
  { name = "Pruthu Gambhir", email = "pruthugambhir@gmail.com" },
]
description = "Python-based life detection GUI for Project Kratos, BITS Goa"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }  # Points to the LICENSE file

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
